[tool.poetry]
name = "IduStorage"
version = "1.0.1"
description = "--/--"
license = "BSD-3-Clause"
authors = ["soldey <71354808+soldey@users.noreply.github.com>"]
readme = "README.md"

packages = [{ include = "idustorage", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
loguru = "^0.7.2"
idu-config = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

good-names = [

]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"